# excal

./: .gitignore  README.md  setup.cfg
excal/: __main__.py  analyzer.py  astNode.py  cwalker.py  offence.py  output.py  pluginManager.py  visitor.py
src/: analyzer.py  cwalker.py  main.py  pluginManager.py  visitor.py
src/excal/: analyzer.py  cwalker.py  pluginManager.py
