[metadata]
name = excal
version = 0.0.1
author = Benedikt Kehrein
author_email = b.kehrein@reply.de
description = Extendable Clang AST based c/c++ linter
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
install_requires =
                 libclang
python_requires = >=3.6


[options.entry_points]
console_scripts =
    excal = main:main
