[metadata]
name = excal
version = 0.0.11
author = Benedikt Kehrein
author_email = b.kehrein@reply.de
description = Extendable Clang AST based c/c++ linter
long_description = file: README.md
long_description_content_type = text/markdown
license = lgpl 2.1
url = https://github.com/PKN-AUTDE/excal
download_url = https://github.com/PKN-AUTDE/excal/archive/refs/tags/v_0_0_11.tar.gz
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
                 libclang
python_requires = >=3.6


[options.entry_points]
console_scripts =
    excal = excal.__main__:main
